--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=en>
 
 <head>
+    <!-- Encabezado-->
     <title>Iguanas</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="Assets - Iguana Page/css/style.css">
@@ -15,20 +16,19 @@
 
 <body>
     <container>
-
-
-
+        <!-- Nav -->
         <nav class="claro">
             <h1> IGUANAS </h1>
         </nav>
-
+        <!-- Foto Superior-->
         <div class="iguanas">
             <img src="Assets - Iguana Page/img/bg-header.jpg" alt="iguana_arriba" id="foto_iguana">
         </div>
-
+        <!-- Fotos centrales -->
         <section class="container_medio">
             <div class="middle_iguana">
                 <article class="texto_iguana">
+                    <!-- Párrafo sobre las iguanas-->
                     <p>
                         La iguana es un reptil perteneciente a la familia Iguanadiae. Su tamaño está entre los 15 cm
                         hasta
@@ -43,15 +43,14 @@
                         domesticado.
                     </p>
                 </article>
+                <!-- Imagen que acompaña al texto -->
                 <div class="foto_iguana_01">
                     <img src="Assets - Iguana Page/img/iguana-1.jpg" alt="iguana_medio_1" id="foto_iguana_01">
                 </div>
-
-
             </div>
 
         </section>
-
+        <!-- Sección que describe características relevantes de las iguanas-->
         <section class="container_medio02">
 
             <h1 id="caracteristicas">
@@ -81,7 +80,7 @@
             </div>
 
         </section>
-
+        <!-- Sección inferior con tres imágenes de iguanas -->
         <section class="container_inferior">
 
             <div class="fotos_iguanas_inferior">
@@ -98,7 +97,7 @@
 
 
     <footer class="pie">
-        <h5 target="_blank" id="texto_pie"> Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h5> 
+        <h5 target="_blank" id="texto_pie"> Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h5>
     </footer>
 
 </body>
