--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </container>
 
-
+    <!-- Pie de página con enlace para conocer más de las iguanas -->
     <footer class="pie">
         <h5 target="_blank" id="texto_pie"> Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h5>
     </footer>
